edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message TokenMetadata {
  // Next available tag: 8

  string id = 1; // @gotags: sql:"pk"
  string name = 2;
  repeated string roles = 7;
  google.protobuf.Timestamp issued_at = 4 [lazy = true];
  google.protobuf.Timestamp expiration = 5 [lazy = true]; // @gotags: search:"Expiration,store"
  bool revoked = 6; // @gotags: search:"Revoked,store"

  string role = 3 [deprecated = true];
}
